add_subdirectory(test-geometry-3d)
add_subdirectory(test-geometry-2d)
add_subdirectory(test-rendering-batched)
add_subdirectory(test-rendering-batched-textured)
add_subdirectory(test-rendering-instanced)
add_subdirectory(test-rendering-instanced-textured)
add_subdirectory(test-shader-normal-batched)
add_subdirectory(test-shader-normal-instanced)
add_subdirectory(test-shader-specular-batched)
add_subdirectory(test-shader-specular-instanced)
add_subdirectory(test-model-create-obj)
add_subdirectory(test-model-load-obj)